--- a/index.html
+++ b/index.html
@@ -1,40 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta charset='utf-8'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Game of Thrones Character Tracker</title>
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" rel="stylesheet"> -->
-    <link href="index.css" rel="stylesheet" type="text/css"/>
-    <link href="https://fonts.googleapis.com/css?family=Artifika" rel="stylesheet">
+    <link href='index.css' rel='stylesheet' type='text/css'/>
+    <link href='grid.css' rel='stylesheet' type='text/css'/>
+    <!-- <link href='https://cdnjs.loudflare.com/ajax/libs/normalize/7.0.0/normalize.css' rel='stylesheet'> -->
+    <link href='https://fonts.googleapis.com/css?family=Artifika' rel='stylesheet'>
   </head>
   <header>
-    <h1>Game of Thrones Character Tracker</h1>
+    <h1 class="row" role="banner">Game of Thrones Character Tracker</h1>
   </header
   <body>
-<section class="startPage">
-    <button class="startButton1">Search by Character Name</button>
-    <button class="startButton2">Search By Character Traits</button>
+    <h3 class='startDescription'>Search by name or by character traits</h3>
+<section class='row startPage'>
+
+    <button class='col-6 startButton1'>Search by Character Name</button>
+    <button class='col-6 startButton2'>Search By Character Traits</button>
 </section>
 
-<div class="characterAndTraits">
- <div class="hidden characterSearchContainer">
-  <form class="characterForm">
+<div class='characterAndTraits'>
+ <div class='hidden characterSearchContainer'>
+  <form class='row characterForm'>
     <fieldset>
-    <label for="characterSearch">Search by Character Name</label>
-    <input id="characterSearch" type="text" placeholder="First and Last Name">
-    <input id="formSubmitNames" type="submit">
-    <input id="formResetNames" type="reset">
+        <label for='characterSearch'>Search by Character Name</label>
+        <input id='characterSearch' type='text' placeholder='First and Last Name' role="search">
+        <input id='formSubmitNames' type='submit'>
+        <input id='formResetNames' type='reset'>
     </fieldset>
   </form>
-  <button class="switchToTraitSearch">Search by Character Traits</button>
+  <button class='switchToTraitSearch'>Search by Character Traits</button>
  </div>
 
- <div class="hidden traitSearchContainer">
-    <form class="traitForm">
+ <div class='hidden traitSearchContainer'>
+    <form class='row traitForm'>
       <fieldset>
-      <label for="houseSearch">Search by Character Culture</label>
-        <select class="cultureSelection">
+      <legend for='houseSearch'>Character Culture</legend>
+        <select class='cultureSelection'>
           <option>Select</option>
           <option>Northmen</option>
           <option>Valyrian</option>
@@ -55,40 +58,38 @@
           <option>Naathi</option>
         </select>
       </fieldset>
+      <fieldset class='characterStatus'>
+      <legend for='characterStatus'>Character Status</legend>
 
+      <label for='characterStatusAlive'>Alive</label>
+      <input id='characterStatusAlive' name='radio' type='radio'>
 
-      <fieldset class="characterStatus">
-      <label for="characterStatus">Search by Character Status</label>
-      <div>
-      <label for="characterStatusAlive">Alive</label>
-      <input id="characterStatusAlive" name="radio" type='radio'>
+      <label for='characterStatusDead'>Dead</label>
+      <input id='characterStatusDead' name='radio'  type='radio'>
 
-      <label for="characterStatusDead">Dead</label>
-      <input id="characterStatusDead" name="radio"  type='radio'>
-
-      <label for="characterStatusUnknown">Either</label>
-      <input id="characterStatusUnknown" name="radio" type='radio'></div>
+      <label for='characterStatusUnknown'>Either</label>
+      <input id='characterStatusUnknown' name='radio' type='radio'>
       </fieldset>
 
-      <input id="formSubmitTraits" type="submit">
-      <input id="formResetTraits" type="reset">
+      <input id='formSubmitTraits' type='submit'>
+      <input id='formResetTraits' type='reset'>
 
     </form>
-    <button class="switchToCharacterName">Search by Character Name</button>
+    <button class='switchToCharacterName'>Character Name</button>
    </div>
   </div>
     <!--Template for results-->
-    <section class="parent">
-    <div class="hidden results"></div>
+    <section class='parent'>
+    <div class='hidden results'></div>
     </section>
 
-<div class="hidden listParent">
-  <div class="namesList"></div>
-    <button class="previous">Previous</button>
-    <div class="pageNumber">Page: 1</div>
-    <button class="next">Next</button>
+<div class='hidden listParent'>
+  <div class='namesList' role="list"></div>
+    <button class='previous'>Previous</button>
+    <div class='pageNumber'>Page: 1</div>
+    <button class='next'>Next</button>
 </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="index.js"></script>
+    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script src='index.js'></script>
   </body>
 </html>
