Updated README.md, accessibility improvements, and design changes.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <!-- <link href='https://cdnjs.loudflare.com/ajax/libs/normalize/7.0.0/normalize.css' rel='stylesheet'> -->
     <link href='https://fonts.googleapis.com/css?family=Artifika' rel='stylesheet'>
   </head>
-  <header>
-    <h1 class="row" role="banner">Game of Thrones Character Tracker</h1>
-  </header
+  <header role="banner">
+    <h1 class="row">Game of Thrones Character Tracker</h1>
+  </header>
   <body>
-    <h3 class='startDescription'>Search by name or by character traits</h3>
+    <h3 class='startDescription'>Search by Name or by Character Traits</h3>
 <section class='row startPage'>
 
     <button class='col-6 startButton1'>Search by Character Name</button>
@@ -75,7 +75,7 @@
       <input id='formResetTraits' type='reset'>
 
     </form>
-    <button class='switchToCharacterName'>Character Name</button>
+    <button class='switchToCharacterName'>Search by Character Name</button>
    </div>
   </div>
     <!--Template for results-->
