--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <title>Game of Thrones Character Tracker</title>
     <link href='index.css' rel='stylesheet' type='text/css'/>
     <link href='grid.css' rel='stylesheet' type='text/css'/>
-    <!-- <link href='https://cdnjs.loudflare.com/ajax/libs/normalize/7.0.0/normalize.css' rel='stylesheet'> -->
     <link href='https://fonts.googleapis.com/css?family=Artifika' rel='stylesheet'>
   </head>
-  <header role="banner">
-    <h1 class="row">Game of Thrones Character Tracker</h1>
+  <header role='banner'>
+    <h1 class='row'>Game of Thrones Character Tracker</h1>
   </header>
   <body>
     <h3 class='startDescription'>Search by Name or by Character Traits</h3>
