basic visual improvements

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
     <link href='grid.css' rel='stylesheet' type='text/css'/>
     <link href='https://fonts.googleapis.com/css?family=Artifika' rel='stylesheet'>
   </head>
-  <header role='banner'>
-    <h1 class='row'>Game of Thrones Character Tracker</h1>
-  </header>
-  <body>
-    <h3 class='startDescription'>Search by Name or by Character Traits</h3>
-<section class='row startPage'>
 
+  
+  <body>
+    <div class="startPageBG">
+    <header role='banner'>
+      <h1 class='row'>Game of Thrones Character Tracker</h1>    
+      <h3 class='startDescription'>Search by Name or by Character Traits</h3>
+    </header>
+<section class='row startPage'>
     <button class='col-6 startButton1'>Search by Character Name</button>
     <button class='col-6 startButton2'>Search By Character Traits</button>
 </section>
+</div>
 
 <div class='characterAndTraits'>
  <div class='hidden characterSearchContainer'>
