--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Game of Thrones Character Tracker</title>
     <link href='index.css' rel='stylesheet' type='text/css'/>
-    <link href='grid.css' rel='stylesheet' type='text/css'/>
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Artifika' rel='stylesheet'>
   </head>
 
@@ -13,18 +13,14 @@
   <body>
     <div class="startPageBG">
     <header role='banner'>
-      <h1 class='row'>Game of Thrones Character Tracker</h1>    
+      <h1 class>Game of Thrones Character Tracker</h1>    
       <h3 class='startDescription'>Search by Name or by Character Traits</h3>
     </header>
-<section class='row startPage'>
-    <button class='col-6 startButton1'>Search by Character Name</button>
-    <button class='col-6 startButton2'>Search By Character Traits</button>
-</section>
 </div>
 
 <div class='characterAndTraits'>
- <div class='hidden characterSearchContainer'>
-  <form class='row characterForm'>
+ <div class='characterSearchContainer'>
+  <form class='characterForm'>
     <fieldset>
         <label for='characterSearch'>Search by Character Name</label>
         <input id='characterSearch' type='text' placeholder='First and Last Name' role="search">
@@ -32,11 +28,10 @@
         <input id='formResetNames' type='reset'>
     </fieldset>
   </form>
-  <button class='switchToTraitSearch'>Search by Character Traits</button>
  </div>
-
- <div class='hidden traitSearchContainer'>
-    <form class='row traitForm'>
+ <h4 class="orH4">OR</h4>
+ <div class='traitSearchContainer'>
+    <form class='traitForm'>
       <fieldset>
       <legend for='houseSearch'>Character Culture</legend>
         <select class='cultureSelection'>
@@ -77,15 +72,13 @@
       <input id='formResetTraits' type='reset'>
 
     </form>
-    <button class='switchToCharacterName'>Search by Character Name</button>
    </div>
   </div>
     <!--Template for results-->
-    <section class='parent'>
-    <div class='hidden results'></div>
-    </section>
+    <h3>Results</h3>
+    <div class='results'></div>
 
-<div class='hidden listParent'>
+<div class='listParent'>
   <div class='namesList' role="list"></div>
     <button class='previous'>Previous</button>
     <div class='pageNumber'>Page: 1</div>
