--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
     <div class="startPageBG">
     <header role='banner'>
       <h1 class>Game of Thrones Character Tracker</h1>    
-      <h3 class='startDescription'>Search by Name or by Character Traits</h3>
     </header>
 </div>
-
+<div class='formAndResult'>
 <div class='characterAndTraits'>
  <div class='characterSearchContainer'>
   <form class='characterForm'>
     <fieldset>
         <label for='characterSearch'>Search by Character Name</label>
         <input id='characterSearch' type='text' placeholder='First and Last Name' role="search">
-        <input id='formSubmitNames' type='submit'>
-        <input id='formResetNames' type='reset'>
     </fieldset>
+    <button class='submitReset formSubmitNames' type='submit'>Submit</button>
+    <button class='submitReset formResetNames' type='reset'>Reset</button>
   </form>
  </div>
  <h4 class="orH4">OR</h4>
  <div class='traitSearchContainer'>
     <form class='traitForm'>
       <fieldset>
-      <legend for='houseSearch'>Character Culture</legend>
+      <legend for='houseSearch'>Search by Character Trait</legend>
         <select class='cultureSelection'>
           <option>Select</option>
           <option>Northmen</option>
@@ -54,9 +53,6 @@
           <option>Asshai</option>
           <option>Naathi</option>
         </select>
-      </fieldset>
-      <fieldset class='characterStatus'>
-      <legend for='characterStatus'>Character Status</legend>
 
       <label for='characterStatusAlive'>Alive</label>
       <input id='characterStatusAlive' name='radio' type='radio'>
@@ -68,17 +64,20 @@
       <input id='characterStatusUnknown' name='radio' type='radio'>
       </fieldset>
 
-      <input id='formSubmitTraits' type='submit'>
-      <input id='formResetTraits' type='reset'>
+      <button class='submitReset formSubmitTraits' type='submit'>Submit</button>
+      <button class='submitReset formResetTraits' type='reset'>Reset</button>
 
     </form>
    </div>
   </div>
     <!--Template for results-->
-    <h3>Results</h3>
-    <div class='results'></div>
+       <div class='results'>
+         <div class="waitingLoad">Waiting for Character Selection</div>
+       </div>
+       </div>
 
-<div class='listParent'>
+
+<div class='hidden listParent'> 
   <div class='namesList' role="list"></div>
     <button class='previous'>Previous</button>
     <div class='pageNumber'>Page: 1</div>
