removed blank results div on mobile devices

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
    </div>
   </div>
     <!--Template for results-->
-       <div class='results'>
+       <div class='hidden results'>
          <div class="waitingLoad">Waiting for Character Selection</div>
        </div>
        </div>
