small test change

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  <div class='traitSearchContainer'>
     <form class='traitForm'>
       <fieldset>
-      <legend for='houseSearch'>Search by Character Trait</legend>
+      <legend for='houseSearch'>Search by Character Traits</legend>
         <select class='cultureSelection'>
           <option>Select</option>
           <option>Northmen</option>
