added small responsiveness/visual improvements

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
   <div class="modalBG">
     <div class="modalText">
-      <h2>Having trouble remembering whose who?</h2>
+      <h2>Having trouble remembering who is who?</h2>
       <div class="modalDivsParent">
       <div class="modalDiv">Search for characters by name or by traits.</div>
       <div class="modalDiv">Get information on their relationships, alliances, and culture.</div> 
       <div class="modalDiv">Know more things.</div>
-      <!-- <iframe class="gif" src="https://giphy.com/embed/121YQW1OQhqGLS" /> -->
     </div>
       <button class="startBtn"><span class="spanStartBtn">Start Searching</span></button>
     </div>
